--- a/index.html
+++ b/index.html
@@ -36,6 +36,8 @@
                 <ul>
                     <li><a href="/welcome">Welcome</a></li>
                     <li><a href="/about">About</a></li>
+                    <li><a href="/test">Test</a></li>
+                    <!--ADD ANY MENU ITEMS HERE, FOLLOWING TEH ABOVE CONVENTION-->
                 </ul>
             </nav>
         </aside>
